@@ -33,9 +33,26 @@ AC_PATH_PROG(UCS2ANY, ucs2any)
 AC_PATH_PROG(MKFONTSCALE, mkfontscale)
 AC_PATH_PROG(MKFONTDIR, mkfontdir)
 
+DEFAULT_FONTDIR=${libdir}/X11/fonts/75dpi
+AC_ARG_WITH(fontdir,
+	AS_HELP_STRING([--with-fontdir=FONTDIR], [Path to install fonts]),
+	[FONTDIR="$withval"],
+	[FONTDIR="$DEFAULT_FONTDIR"])
+AC_SUBST(FONTDIR)
+
 PKG_CHECK_MODULES(MAPS, [fontutil])
 MAPFILES_PATH=$(pkg-config --variable=mapdir fontutil)
 AC_SUBST(MAPFILES_PATH)
+
+XORG_FONT_CHECK_ISO8859_1
+XORG_FONT_CHECK_ISO8859_2
+XORG_FONT_CHECK_ISO8859_3
+XORG_FONT_CHECK_ISO8859_4
+XORG_FONT_CHECK_ISO8859_9
+XORG_FONT_CHECK_ISO8859_10
+XORG_FONT_CHECK_ISO8859_13
+XORG_FONT_CHECK_ISO8859_14
+XORG_FONT_CHECK_ISO8859_15
 
 XORG_RELEASE_VERSION
 
